@@ -26,6 +26,7 @@ struct xbee_rxInfo {
 	xsys_sem sem;
 	void *ioArg;
 	xbee_err (*ioFunc)(struct xbee *xbee, void *arg, struct xbee_buf **buf);
+	void (*eofCallback)(struct xbee *xbee, struct xbee_rxInfo *rxInfo);
 	void *handlerArg;
 	struct xbee_frameBlock *fBlock;
 	struct xbee_modeConType **conTypes;
